# menuaccess

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/api/v1/: health.py  response_example.json  upload.py
app/core/: config.py
app/schemas/: output.py  parsed_output.py
app/services/: index.py  query.py  supabase.py  test.json
