[project]
name = "menuaccess"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Butch78", email = "matthewtyleraylward@hotmail.com" }
]
dependencies = [
    "fastapi~=0.99.1",
    "llama-index~=0.6.38.post1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
